--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }} 
           role-session-name: production-deploy
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-1
 
       # publish to prod environment
       - name: Deploy to S3
