--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "docusaurus": "^1.14.7",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
