--- a/package.json
+++ b/package.json
@@ -20,12 +20,26 @@
     "@docusaurus/plugin-google-tag-manager": "^3.0.0",
     "@docusaurus/preset-classic": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "c-kzg": "^2.1.2",
     "clsx": "^1.2.1",
+    "crypto-browserify": "^3.12.0",
     "docusaurus": "^1.14.7",
+    "googleapis": "^133.0.0",
+    "https-browserify": "^1.0.0",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tls": "^0.0.1",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
