--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "assert": "^2.1.0",
     "clsx": "^1.2.1",
     "docusaurus": "^1.14.7",
-    "googleapis": "^133.0.0",
+    "dotenv": "^16.4.4",
     "net": "^1.0.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.0.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.47.0",
-    "stream-browserify": "^3.0.0",
     "url": "^0.11.3"
   },
   "devDependencies": {
