--- a/package.json
+++ b/package.json
@@ -20,17 +20,13 @@
     "@docusaurus/plugin-google-tag-manager": "^3.0.0",
     "@docusaurus/preset-classic": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "assert": "^2.1.0",
     "clsx": "^1.2.1",
     "docusaurus": "^1.14.7",
     "dotenv": "^16.4.4",
-    "net": "^1.0.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.0.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.47.0",
-    "url": "^0.11.3"
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
