--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "docusaurus": "^1.14.7",
     "dotenv": "^16.4.4",
+    "linkinator": "^6.1.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
